--- a/app/src/main/res/layout/weight_stat.xml
+++ b/app/src/main/res/layout/weight_stat.xml
@@ -9,5 +9,11 @@
         android:layout_height="match_parent"
         android:id="@+id/graph" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button" />
+
 
 </LinearLayout>
