--- a/app/src/main/res/layout/shedule_item.xml
+++ b/app/src/main/res/layout/shedule_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/list_selector"
+    android:background="@drawable/gradient_spinner"
     android:orientation="horizontal"
     android:padding="5dip" >
     <!-- ListRow Left side Thumbnail image -->
@@ -34,7 +34,6 @@
         android:id="@+id/textViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/list_image"
         android:layout_marginLeft="75dip"
         android:layout_centerVertical="true"
         android:paddingBottom ="10dip"
