--- a/app/src/main/res/layout/exersize_result_activity.xml
+++ b/app/src/main/res/layout/exersize_result_activity.xml
@@ -4,8 +4,20 @@
     android:layout_height="match_parent"
     android:background="#ffd5ff96">
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Add"
+        android:id="@+id/button_add" />
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listViewExersizeResult" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        android:id="@+id/button_ok" />
 </LinearLayout>
