--- a/app/src/main/res/layout/edit_results_dialog.xml
+++ b/app/src/main/res/layout/edit_results_dialog.xml
@@ -63,5 +63,5 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView2" />
+        android:id="@+id/listViewEditResults" />
 </LinearLayout>
