--- a/app/src/main/res/layout/schedule_activity.xml
+++ b/app/src/main/res/layout/schedule_activity.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1">
+    android:layout_weight="1"
+    android:background="#ffd5ff96">
 
 
     <ListView
