--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -3,25 +3,33 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     android:background="#ffd5ff96">
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="calendar"
+        android:text="@string/train"
+        android:id="@+id/button_schedule_today"
+        android:layout_gravity="center_horizontal" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/calendar"
         android:id="@+id/button_calendar" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="schedule"
+        android:text="@string/exercises"
         android:id="@+id/button_schedule"
         android:layout_gravity="center_horizontal" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="weight"
+        android:text="@string/weight"
         android:id="@+id/button_weight" />
 
     <ImageView
