--- a/app/src/main/res/layout/exercise_result_item.xml
+++ b/app/src/main/res/layout/exercise_result_item.xml
@@ -8,8 +8,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:textSize="18dp"
         android:text="10-10-2015"
         android:id="@+id/textViewResultsDate"
+        android:textStyle="bold"
         android:layout_centerVertical="true"/>
 
     <TextView
@@ -26,8 +28,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:background="@drawable/edit"
+        android:text="edit"
+        android:drawableLeft="@drawable/edit"
+
         android:id="@+id/buttonEditResults"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"/>
