--- a/app/src/main/res/layout/new_exercize_activity.xml
+++ b/app/src/main/res/layout/new_exercize_activity.xml
@@ -31,6 +31,7 @@
     <GridView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="1"
         android:numColumns="2"
         android:gravity="center"
         android:horizontalSpacing="10dp"
@@ -38,7 +39,7 @@
         android:columnWidth="60dp"
         android:stretchMode="columnWidth"
         android:id="@+id/gridView"
-        android:layout_weight="1"/>
+/>
 
     <Button
         android:layout_width="match_parent"
