--- a/app/src/main/res/layout/exersize_result_activity.xml
+++ b/app/src/main/res/layout/exersize_result_activity.xml
@@ -8,7 +8,7 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Add"
+        android:text="@string/add"
         android:id="@+id/button_add" />
 
     <ListView
