--- a/app/src/main/res/layout/category_spinner_item.xml
+++ b/app/src/main/res/layout/category_spinner_item.xml
@@ -14,6 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:text="fdfdfdf"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:text="-------------"
         android:layout_gravity="center_vertical"/>
 </LinearLayout>
