--- a/app/src/main/res/layout/new_exercize_activity.xml
+++ b/app/src/main/res/layout/new_exercize_activity.xml
@@ -44,6 +44,6 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cancel"
+        android:text="@string/cancel"
         android:id="@+id/button_new_excersize_cancel" />
 </LinearLayout>
