--- a/app/src/main/res/layout/category_spinner_item.xml
+++ b/app/src/main/res/layout/category_spinner_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -8,7 +8,8 @@
         android:id="@+id/category_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/arm_icon"/>
+        android:src="@drawable/arm_icon"
+        android:layout_centerVertical="true"/>
     <TextView
         android:id="@+id/category_name"
         android:layout_width="wrap_content"
@@ -17,5 +18,13 @@
         android:textStyle="bold"
         android:textColor="#000000"
         android:text="-------------"
-        android:layout_gravity="center_vertical"/>
-</LinearLayout>
+        android:layout_toRightOf="@id/category_icon"
+        android:layout_centerVertical="true"/>
+
+ <!--   <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/arrow_down"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"/> -->
+</RelativeLayout>
