--- a/app/src/main/res/layout/new_exercize_activity.xml
+++ b/app/src/main/res/layout/new_exercize_activity.xml
@@ -10,8 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:text="Select category:"
+        android:text="@string/select_category"
         android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:id="@+id/textView" />
 
     <Spinner
@@ -24,22 +25,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:text="Select exersize:"
+        android:text="@string/select_exercise"
         android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:id="@+id/textView2" />
 
     <GridView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:padding="5dp"
         android:numColumns="2"
         android:gravity="center"
         android:horizontalSpacing="10dp"
         android:verticalSpacing="10dp"
         android:columnWidth="60dp"
         android:stretchMode="columnWidth"
-        android:id="@+id/gridView"
-/>
+        android:id="@+id/gridView"/>
 
     <Button
         android:layout_width="match_parent"
