--- a/app/src/main/res/layout/exercise_info_activity.xml
+++ b/app/src/main/res/layout/exercise_info_activity.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_spinner">
+    android:background="#ffff00">
 
     <Button
         android:layout_width="wrap_content"
@@ -31,12 +31,27 @@
         android:background="@drawable/round_transparent">
         </LinearLayout> -->
 
+
+
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scrollbars="vertical"
         android:fillViewport="true">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dp"
+            android:background="#ffff00">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView2"
+            android:background="@drawable/test2"/>
 
         <TextView
             android:id="@+id/textViewExerciseInfoDescription"
@@ -47,6 +62,9 @@
             vrevrevrevrevre
             vrevrevrevre
             vrevrevrvv"/>
+
+        </LinearLayout>
+
 
     </ScrollView>
   </LinearLayout>
