--- a/app/src/main/res/layout/exercise_info_activity.xml
+++ b/app/src/main/res/layout/exercise_info_activity.xml
@@ -47,21 +47,13 @@
             android:padding="5dp"
             android:background="#ffff00">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView2"
-            android:background="@drawable/test2"/>
 
-        <TextView
+        <WebView
             android:id="@+id/textViewExerciseInfoDescription"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1.0"
-            android:text="fdgfjvgnjrenvgrjenvvtrv
-            vrevrevrevrevre
-            vrevrevrevre
-            vrevrevrvv"/>
+            android:background="@android:color/transparent"/>
 
         </LinearLayout>
 
