--- a/app/src/main/res/layout/exercise_info_activity.xml
+++ b/app/src/main/res/layout/exercise_info_activity.xml
@@ -33,7 +33,7 @@
 
 
 
-    <ScrollView
+    <ScrollView android:id="@+id/info_scroll_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         >
