--- a/app/src/main/res/layout/exercise_info_activity.xml
+++ b/app/src/main/res/layout/exercise_info_activity.xml
@@ -37,6 +37,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:padding="5dp"
+        android:overScrollMode="never"
         >
 
 
