--- a/app/src/main/res/layout/exercise_info_activity.xml
+++ b/app/src/main/res/layout/exercise_info_activity.xml
@@ -7,7 +7,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="->>"
+        android:text="select"
         android:layout_marginLeft="30dp"
         android:id="@+id/button_next" />
 
