--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,10 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="activity_style">
+    <item name="android:background">#fafaf7</item>
+    </style>
+
     <style name="spinner_style">
         <item name="android:background">@drawable/gradient_spinner</item>
         <item name="android:layout_marginLeft">5dp</item>
