--- a/app/src/main/res/layout/exersize_result_activity.xml
+++ b/app/src/main/res/layout/exersize_result_activity.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffffff"
+    style="@style/activity_style"
     android:layout_weight="1">
 
     <Button
