--- a/app/src/main/res/layout/new_schedule_activity.xml
+++ b/app/src/main/res/layout/new_schedule_activity.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
-    android:background="#fafaf7">
+    style="@style/activity_style">
 
 
     <ListView
