--- a/app/src/main/res/layout/weight_stat.xml
+++ b/app/src/main/res/layout/weight_stat.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffd5ff96">
+    style="@style/activity_style">
 
     <Button
         android:layout_width="wrap_content"
