--- a/app/src/main/res/layout/new_exercize_activity.xml
+++ b/app/src/main/res/layout/new_exercize_activity.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
-    style="@style/activity_style">
+    style="@style/activity_style1">
 
     <TextView
         android:layout_width="wrap_content"
