--- a/app/src/main/res/layout/edit_results_dialog.xml
+++ b/app/src/main/res/layout/edit_results_dialog.xml
@@ -2,63 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_spinner">
+    style="@style/activity_style1"
+    android:padding="10dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date:"
-        android:textSize="25dp"
-        android:id="@+id/textView3" />
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:padding="5dp"
-        android:background="@drawable/round_transparent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Weight:"
-            android:textSize="18dp"
-            android:id="@+id/textView33"
-            android:layout_gravity="center_vertical"/>
-
-        <EditText
-            android:layout_width="60dp"
-            android:layout_height="fill_parent"
-            android:background="@drawable/round"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editTextWeight" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Reps:"
-            android:textSize="18dp"
-            android:id="@+id/textView44"
-            android:layout_gravity="center_vertical"/>
-        <EditText
-            android:layout_width="60dp"
-            android:layout_height="fill_parent"
-            android:background="@drawable/round"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editTextReps" />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="add"
+        android:text="@string/add"
         android:id="@+id/button_add_result"
-        android:layout_marginLeft="20dp"
-        android:layout_gravity="right" />
-
-
-
-    </LinearLayout>
+        android:background="@drawable/button_round_corner_selector"/>
 
     <ListView
         android:layout_width="match_parent"
