--- a/app/src/main/res/layout/new_schedule_activity.xml
+++ b/app/src/main/res/layout/new_schedule_activity.xml
@@ -2,32 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1"
-    style="@style/activity_style1">
+    style="@style/activity_style1"
+    android:padding="10dp">
+
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/add_excercise"
+            android:id="@+id/button_add_excersize"
+            android:background="@drawable/button_round_corner_selector"/>
 
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/listView"
-        android:layout_weight="1"/>
+        android:layout_height="fill_parent"
+        android:id="@+id/listView"/>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal" android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add"
-        android:id="@+id/button_add_excersize" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="OK"
-        android:id="@+id/button_new_cancel"/>
-
-        </LinearLayout>
 </LinearLayout>
