--- a/app/src/main/res/layout/weight_stat.xml
+++ b/app/src/main/res/layout/weight_stat.xml
@@ -2,18 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/activity_style1">
+    style="@style/activity_style1"
+    android:padding="10dp">
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_weight"
         android:id="@+id/button_add_weight" />
 
-    <com.jjoe64.graphview.GraphView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/graph" />
+    <lecho.lib.hellocharts.view.LineChartView
+            android:id="@+id/graph"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
 
 
 </LinearLayout>
