--- a/app/src/main/res/drawable/cell_border.xml
+++ b/app/src/main/res/drawable/cell_border.xml
@@ -3,4 +3,5 @@
     <stroke android:width="0.1dp" android:color="#000000"/>
     <padding android:left="0dp" android:top="0dp"
         android:right="0dp" android:bottom="0dp" />
+    <solid android:color="@android:color/transparent" />
 </shape>
