--- a/app/src/main/res/drawable/info_block_round_corner.xml
+++ b/app/src/main/res/drawable/info_block_round_corner.xml
@@ -8,4 +8,6 @@
         android:bottomRightRadius="7dp"
         android:topLeftRadius="7dp"
         android:topRightRadius="7dp" />
+
+    <solid android:color="@android:color/transparent" />
 </shape>
