--- a/app/src/main/res/layout/exersize_result_activity.xml
+++ b/app/src/main/res/layout/exersize_result_activity.xml
@@ -13,12 +13,14 @@
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
 
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/table_layout_results"
+        android:background="@android:color/transparent"
 
         android:stretchColumns="1"
         android:shrinkColumns="1"/>
