add result Button

--- a/app/src/main/res/layout/exersize_result_activity.xml
+++ b/app/src/main/res/layout/exersize_result_activity.xml
@@ -9,6 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_result"
+        android:background="@drawable/button_round_corner_selector"
         android:id="@+id/button_add" />
 
     <ScrollView
